storage: add filesystem pressure measurement
